--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: ^3.13.0
+  firebase_auth: ^5.3.1
 
 dev_dependencies:
   flutter_test:
