--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
   firebase_core: ^3.13.0
   firebase_auth: ^5.3.1
+  firebase_messaging: ^15.1.3
+  flutter_local_notifications: ^17.2.3
 
 dev_dependencies:
   flutter_test:
