--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,13 +13,27 @@ dependencies:
   firebase_auth: ^5.3.1
   firebase_messaging: ^15.1.3
   flutter_local_notifications: ^17.2.3
+  permission_handler: ^12.0.0+1 
+  cloud_firestore: ^5.6.7
+  provider: ^6.1.5
+  geolocator: ^14.0.0
+  geocoding: ^2.1.0
+  google_maps_flutter: ^2.12.2
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
   assets:
     - assets/icons/
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/app_icon.png"
+  remove_alpha_ios: true
